--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             "
           >
             <img
-              src="/assets/imgs/vap.png"
+              src="./assets/imgs/vap.png"
               width="100%"
               class="card-img-top"
               alt="model image"
@@ -149,7 +149,7 @@
             "
           >
             <img
-              src="/assets/imgs/events.png"
+              src="./assets/imgs/events.png"
               width="100%"
               class="card-img-top"
               alt="projection window"
@@ -177,7 +177,7 @@
             "
           >
             <img
-              src="/assets/imgs/projwin.png"
+              src="./assets/imgs/projwin.png"
               width="100%"
               class="card-img-top"
               alt="projection window"
@@ -204,7 +204,7 @@
             "
           >
             <img
-              src="/assets/imgs/zeroshot.png"
+              src="./assets/imgs/zeroshot.png"
               width="100%"
               class="card-img-top"
               alt="zero shot img"
@@ -316,7 +316,7 @@
           </ul>
         </div>
         <div class="col" style="margin: auto">
-          <img src="/assets/imgs/vap.png" width="100%" alt="model image" />
+          <img src="./assets/imgs/vap.png" width="100%" alt="model image" />
         </div>
       </div>
     </div>
@@ -365,7 +365,7 @@
         </div>
         <div class="col">
           <img
-            src="/assets/imgs/projwin.png"
+            src="./assets/imgs/projwin.png"
             width="100%"
             alt="projection window"
           />
@@ -383,7 +383,7 @@
       <div class="row">
         <div class="col">
           <h3>Shift vs Hold</h3>
-          <img src="/assets/imgs/ShiftHold.png" width="90%" />
+          <img src="./assets/imgs/ShiftHold.png" width="90%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict the next speaker during <strong> mutual silences</strong>.
           </p>
@@ -396,8 +396,8 @@
         </div>
         <div class="col">
           <h3>Shift-Prediction</h3>
-          <img src="/assets/imgs/ShiftPred.png" width="90%" />
-          <img src="/assets/imgs/ShiftPredNeg.png" width="90%" />
+          <img src="./assets/imgs/ShiftPred.png" width="90%" />
+          <img src="./assets/imgs/ShiftPredNeg.png" width="90%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict the next speaker during <strong>active speech</strong>.
           </p>
@@ -411,8 +411,8 @@
         </div>
         <div class="col">
           <h3>BC-Prediction</h3>
-          <img src="/assets/imgs/bc.png" width="90%" />
-          <img src="/assets/imgs/BCPred.png" width="90%" />
+          <img src="./assets/imgs/bc.png" width="90%" />
+          <img src="./assets/imgs/BCPred.png" width="90%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict upcoming backchannels (<strong>BC</strong>s).
           </p>
@@ -429,7 +429,7 @@
         </div>
         <div class="col">
           <h3>Short vs Long</h3>
-          <img src="/assets/imgs/ShortLong.png" width="90%" />
+          <img src="./assets/imgs/ShortLong.png" width="90%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict the length (Short vs Long) at the onset of an utterance
             during a shift event.
@@ -474,7 +474,7 @@
       <div class="row">
         <div class="col">
           <h3>Shift vs Hold</h3>
-          <img src="/assets/imgs/zeroshot.png" width="60%" />
+          <img src="./assets/imgs/zeroshot.png" width="60%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict the next speaker during <strong>mutual silence</strong>.
           </p>
@@ -500,10 +500,10 @@
           <h3>Shift-Prediction</h3>
           <img
             style="border: solid 1px; padding: 5px"
-            src="/assets/imgs/predshift.png"
+            src="./assets/imgs/predshift.png"
             width="45%"
           />
-          <img src="/assets/imgs/predshift2.png" width="45%" />
+          <img src="./assets/imgs/predshift2.png" width="45%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict the next speaker during <strong>active speech</strong>.
           </p>
@@ -529,7 +529,7 @@
       <div class="row">
         <div class="col">
           <h3>BC-Prediction</h3>
-          <img src="/assets/imgs/zero_bc_pred.png" width="60%" />
+          <img src="./assets/imgs/zero_bc_pred.png" width="60%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict an upcoming backchannel (short segment of activity) from the
             listener during active speech or mutual silences.
@@ -556,7 +556,7 @@
         </div>
         <div class="col">
           <h3>Short vs Long</h3>
-          <img src="/assets/imgs/zero_bc_pred.png" width="60%" />
+          <img src="./assets/imgs/zero_bc_pred.png" width="60%" />
           <p style="text-align: left; font-size: 1.2rem">
             Predict if a recent onset will be part of Long or Short activity
             segment.
