--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navBarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -201,13 +201,20 @@
 
     <!-- Demo -->
     <div class="container-fluid text-center" id="demo">
-      <h2>Demo</h2>
-      <br />
-      <div class="container text-center">
-        <video style="max-width: 75%" controls>
-          <source src="./assets/HerVap.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
+      <div class="row text-center">
+        <h2>Demo</h2>
+
+        <div class="col-md-4">
+          <img width="90%" src="./assets/imgs/demo.png" alt="" />
+        </div>
+        <div class="col">
+          <div class="container text-center">
+            <video style="max-width: 75%" controls>
+              <source src="./assets/HerVap.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+        </div>
       </div>
     </div>
     <br />
