added second projwin img

--- a/index.html
+++ b/index.html
@@ -203,7 +203,6 @@
     <div class="container-fluid text-center" id="demo">
       <div class="row text-center">
         <h2>Demo</h2>
-
         <div class="col-md-4">
           <img width="90%" src="./assets/imgs/demo.png" alt="" />
         </div>
@@ -399,8 +398,13 @@
         </div>
         <div class="col">
           <img
-            src="./assets/imgs/projwin.png"
+            src="./assets/imgs/projwin2.png"
             width="100%"
+            alt="projection window"
+          />
+          <img
+            src="./assets/imgs/projwin.png"
+            width="70%"
             alt="projection window"
           />
         </div>
