added paper links (arxiv)

--- a/index.html
+++ b/index.html
@@ -65,19 +65,35 @@
           activity over the next 2 seconds. The main purpose is to use it as a
           <strong>turn-taking</strong> model for spoken dialog systems.
         </p>
-        <button class="btn btn-primary" type="button">
-          <a href="#demo" style="color: white"> Demo </a>
-        </button>
-        <button class="btn btn-primary" type="button">
-          <a href="https://arxiv.org/abs/2205.09812" style="color: white">
-            TBD: Paper (Model/Interspeech2022)
-          </a>
-        </button>
-        <button class="btn btn-primary" type="button">
-          <a href="#" style="color: white">
-            TBD: Paper (Prosody/SigDial2022)
-          </a>
-        </button>
+        <ul style="list-style-type: none">
+          <li style="padding: 5px">
+            <button class="btn btn-primary" type="button">
+              <a href="#demo" style="color: white"> Demo </a>
+            </button>
+          </li>
+          <li style="padding: 5px">
+            <button class="btn btn-primary" type="button">
+              <a href="https://arxiv.org/abs/2205.09812" style="color: white">
+                Voice Activity Projection: Self-supervised Learning of
+                Turn-taking Events
+              </a>
+            </button>
+            <ul>
+              <li>INTERSPEECH 2022</li>
+            </ul>
+          </li>
+          <li style="padding: 5px">
+            <button class="btn btn-primary" type="button">
+              <a href="http://arxiv.org/abs/2209.05161" style="color: white">
+                How Much Does Prosody Help Turn-taking? Investigations using
+                Voice Activity Projection Models
+              </a>
+            </button>
+            <ul>
+              <li>SIGDIAL 2022 Best Paper Award Winner</li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </div>
 
@@ -253,7 +269,12 @@
           <div class="col-md-4">
             <h4>Main strengths</h4>
             <ul
-              style="margin: auto; text-align:left; border: solid 1px gray; border-radius: 5px"
+              style="
+                margin: auto;
+                text-align: left;
+                border: solid 1px gray;
+                border-radius: 5px;
+              "
             >
               <li><b>General</b></li>
               <ul>
